# PredaMark

./: COMPLETE_WSL_SETUP.md  DEPLOYMENT.md  HOW_TO_RUN.md  PROJECT_STATUS.md  README.md  WINDOWS_BUILD_REQUIREMENTS.md  WINDOWS_SETUP_STEPS.md  WSL_FIX.md  hardhat.config.js  package.json  requirements.txt  setup_instructions.md
contracts/: PredictionMarket.sol
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.js
frontend/src/config/: linera.js
frontend/src/pages/: AboutPage.js  PredictionPage.js  PredictionPageLinera.js
frontend/src/services/: lineraService.js
frontend/src/utils/: wallet.js
linera-app/: .gitignore  Cargo.toml  README.md  build.sh
linera-app/src/: contract.rs  lib.rs  service.rs  state.rs
