[package]
name = "prediction-market"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = "8"
linera-sdk = { path = "../linera-protocol/linera-sdk" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"

[[bin]]
name = "prediction_market_contract"
path = "src/contract.rs"

[[bin]]
name = "prediction_market_service"
path = "src/service.rs"

[workspace]
resolver = "2"


